--- a/docs/tools/templates/ja/template.cshtml
+++ b/docs/tools/templates/ja/template.cshtml
@@ -60,11 +60,11 @@
               {
               <ul class="nav nav-list">
                 <li><a href="@Root/tutorial.html#creating">データフレームの作成</a></li>
-                <li><a href="@Root/tutorial.html#reindexing-and-joins">インデックスとジョインを使用する</a></li>
-                <li><a href="@Root/tutorial.html#selecting">値の読み取りとスライシング</a></li>
+                <li><a href="@Root/tutorial.html#reindexing-and-joins">インデックスと結合を使用する</a></li>
+                <li><a href="@Root/tutorial.html#selecting">値の選択とスライシング</a></li>
                 <li><a href="@Root/tutorial.html#timeseries">時系列データ</a></li>
-                <li><a href="@Root/tutorial.html#projections">投影およびフィルタ</a></li>
-                <li><a href="@Root/tutorial.html#grouping">グループ集計</a></li>
+                <li><a href="@Root/tutorial.html#projections">射影とフィルタリング</a></li>
+                <li><a href="@Root/tutorial.html#grouping">グループ化と集計</a></li>
               </ul>
               }
             </li>
