Update documents - translate frame.fsx into Japanese - fix wrong links in template.cshtml - fix wording in tutorial.fsx

--- a/docs/tools/templates/ja/template.cshtml
+++ b/docs/tools/templates/ja/template.cshtml
@@ -153,11 +153,11 @@
             </li>
 
             <li class="nav-header">ドキュメント</li>
-            <li><a href="@Root/reference/index.html">APIリファレンス(En)</a></li>
+            <li><a href="@Root/../reference/index.html">APIリファレンス(En)</a></li>
             <li class="divider"></li>
-            <li><a href="@Root/reference/deedle-seriesmodule.html">Series モジュール</a></li>
-            <li><a href="@Root/reference/deedle-framemodule.html">Frame モジュール</a></li>
-            <li><a href="@Root/reference/deedle-stats.html">Stats モジュール</a></li>
+            <li><a href="@Root/../reference/deedle-seriesmodule.html">Series モジュール</a></li>
+            <li><a href="@Root/../reference/deedle-framemodule.html">Frame モジュール</a></li>
+            <li><a href="@Root/../reference/deedle-stats.html">Stats モジュール</a></li>
 
             <li class="nav-header">サンプル</li>
             <li><a href="@Root/lazysource.html">遅延データ読み込み</a></li>
